<resources>
    <string name="app_name">My Application</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="login">Login</string>
    <string name="userName">User name</string>
    <string name="password">Password</string>
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="address">Address</string>
    <string name="phone">Phone</string>
    <string name="save">Save</string>
    <string name="newClient">New Client</string>
    <string name="required_field">Field Required!</string>
    <string name="required">Field Required!</string>
    <string name="success">Success!</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="confirmDelete">Do you really want to delete?</string>
    <string name="confirm">Confirm</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="consult">Consult</string>
    <string name="cep">Cep</string>
    <string name="find">Find</string>
    <string name="tipoLogradouro">Tipo de Logradouro</string>
    <string name="logradouro">Logradouro</string>
    <string name="bairro">Bairro</string>
    <string name="cidade">Cidade</string>
    <string name="estado">Estado</string>
    <string name="userInvalid">The User Name or Password you entered is invalid!</string>
    <string name="cepRequired">The field CEP is required to find the address!</string>
    <string name="addressNotFound">Address not found or Internet Connection problem!</string>
    <string name="loading">Loading</string>
    <string name="search">Search</string>
</resources>
